--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.0"
 sendgrid = "^6.10.0"
 setuptools = "^69.0.0"
 langchain-openai = "^0.3.3"
+loguru = "^0.7.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
